[package]
name = "bandit"
version = "0.12.2"
authors = ["Michael Bohn <michael.bohn@freiheit.com>"]
description = "Bandit Algorithms in Rust"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/bandit"

[dependencies]
rand = "0.8.3"
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"

[dev-dependencies]
regex = "1.4.5"
