[package]
name = "bandit"
version = "0.12.3"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "Bandit Algorithms in Rust"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/bandit"

[dependencies]
rand = "0.8.5"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"

[dev-dependencies]
regex = "1.5.5"
