[package]
name = "bandit"
version = "0.12.4"
edition = "2024"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]
description = "Bandit Algorithms in Rust"
license = "GPL-3.0"
repository = "https://github.com/Ragnaroek/bandit"

[dependencies]
rand = "0.9.0"
serde = "1.0.218"
serde_json = "1.0.139"
serde_derive = "1.0.218"

[dev-dependencies]
regex = "1.11.1"
